# datamaxi-rust

./: .env.example  .gitignore  CNAME  Cargo.toml  README.md  crates.js  deny.toml  help.html  index.html  search-index.js  settings.html  sidebar-items.js  src-files.js
.github/workflows/: deny.yml  docs.yml  live.yml  rust.yml  semver.yml
api/: type.Result.html
cex/: struct.Candle.html
datamaxi/: all.html  index.html  sidebar-items.js  src-files.js  struct.Announcements.html  struct.CexCandle.html  struct.CexSymbol.html  struct.Forex.html  struct.FundingRate.html  struct.IndexPrice.html  struct.Liquidation.html  struct.Listing.html  struct.MarginBorrow.html  struct.NaverTrend.html  struct.OpenInterest.html  struct.Premium.html  struct.Telegram.html  struct.Ticker.html  struct.Token.html  struct.TradingFees.html  struct.WalletStatus.html
datamaxi/api/: enum.Error.html  enum.ErrorKind.html  index.html  sidebar-items.js  struct.Client.html  struct.ClientBuilder.html  struct.Config.html  struct.Error.html  struct.Paginator.html  trait.Datamaxi.html  trait.Paginated.html  trait.ResultExt.html  type.Result.html
datamaxi/cex/: index.html  sidebar-items.js  struct.Candle.html
datamaxi/datamaxi/: index.html
datamaxi/dex/: index.html  sidebar-items.js  struct.Dex.html
datamaxi/models/: index.html  sidebar-items.js  struct.CandleDetail.html  struct.CandleOptions.html  struct.CandleResponse.html  struct.PoolsOptions.html  struct.PoolsResponse.html  struct.SymbolsOptions.html  struct.SymbolsResponse.html  struct.TradeDetail.html  struct.TradeOptions.html  struct.TradeResponse.html
dex/: index.html  struct.Candle.html  struct.Trade.html
examples/: README.md  candle.rs  cex-candle.rs  dex-candle.rs  dex-trade.rs  dex.rs  forex.rs  fundingrate.rs  google.rs  naver.rs
models/: sidebar-items.js  struct.CandleResponse.html  struct.PoolsResponse.html  struct.TradeResponse.html
search.desc/datamaxi/: datamaxi-desc-0-.js
search.index/: 002cebafef.js  005dd36bb6.js  009d2c241c.js  00d075e7a6.js  01234e21f8.js  01388fcc2d.js  0177387382.js  01876dc97f.js  024d77c124.js  027f3fc582.js  0298ffec5a.js  02a1e28f42.js  02b0cdeaab.js  02d354c65d.js  02d476e27b.js  033f9e1723.js  03401664b4.js  037bc32957.js  03f02e08bd.js  04019de455.js  04976a2b6b.js  04c4d3c0ed.js  04d342355c.js  055cbbdf99.js  0590e1c3c5.js  059ce56e45.js  05cb2bfc39.js  05d67ab642.js  05e391a8a5.js  06560ff2d4.js  067039c155.js  068a80ebe3.js  0695e27dbe.js  07366c9bfe.js  076d84920b.js  078ba7462f.js  07ab04c552bb.js  07c850d4b4.js  07e38cac82.js  07f0e6eef6.js  (+558 more)
search.index/crateNames/: e1e20c4465c8.js
search.index/desc/: 04f94f8b42.js  10f3f283bf.js  126fb66791.js  1515cbf53b.js  18c042c2df.js  20286707bb44.js  23842468a7.js  32785c7b15.js  34012739d7.js  366b676c9a.js  5a77f92735.js  933e245d81d1.js  aac82eef33.js  afea233125.js  b45ae569aa.js  b4ec5a7eba.js  c60a5dee45.js  d9e118e949.js  e8d942019a.js  e9cb8ab23d.js  ea7e4a22b5.js  f7f13aa6f7.js  f9afc3e396.js
search.index/entry/: 01618e1dfd.js  0d495b1f4c.js  10aa933b5d.js  20b453da3b.js  26ef3f40f4.js  31a55b4291.js  50ed21235bfe.js  5a899c5970.js  692fb2d3a0.js  6d6abfa9ea.js  83ec7778bb.js  8800574c73.js  9134121da0.js  9aabf3cfdf.js  b9c5c8bee5.js  c0201c5db3.js  cd69cfdbfa.js  d6bfcaebf2.js  e08e6c92b20d.js  e1c8ea94d0.js  ea7b7fa275.js  f0a5fa05fe.js  f4a79ce925.js  f9b1e9e336.js  fa4322e9af.js  fe41c22a9f.js
search.index/function/: 013596dbfb.js  023fa6baec.js  064875330d.js  42bc013915.js  4b916b43da.js  5cda65f044.js  717f2b1f17.js  737e4b3f68.js  7de93ac237.js  87aff3e610.js  9a6c583a12.js  9d8272f097.js  a0205d6e03.js  a0ae12e910.js  ae5c2745bb.js  c00d32b3db.js  c753c013bd65.js  e624a4d55e.js  e8e4568ad4.js  eb94b213a2.js  ebe4e81054.js  f14c8cb0c2.js  f6d9ff315063.js
search.index/generic_inverted_index/: 0245be9289e1.js  04b91cd534.js  07669a3c0a.js  0dc3bf0058.js  1cf95533fc.js  230d5b69ed.js  34d31cfdbd.js  373a9f8560.js  45203f3ef4.js  5f4a53074491.js  600f9ca27b.js  87af7e6139.js  90ff378acb.js  9d27378004.js  aced28c9c1.js  c0003bd528.js  c46b7c01fd.js  c53309c92c.js  d4d93b7e9e.js  db629f9842.js  ddcf853362.js  fb4bce05d9.js
search.index/name/: 080aa0c34a.js  1700b4b3eb.js  2b13f633b6.js  319a8fdf4c.js  4066801c8b.js  4c275a8bbb.js  6a435c85cb.js  750760abd8.js  81f54d54c3.js  8dcff7db74.js  8e05dfeec877.js  973e28d86f08.js  a73493dfc5.js  b5b5a0b8b9.js  c4bab5a39f.js  d009b05171.js  d311042f8d.js  e1464171ac.js  e602146bef.js  ef029468dd.js  f6169817f1.js  fa6c679fef.js
search.index/normalizedName/: 027bc80fab.js  057ce2ab27.js  0fe8c24b28.js  1713e9acf7.js  1aac6dc3e9.js  382870618a.js  45b098f0d2.js  4ec2514db181.js  51b77eccad16.js  57176a8570.js  70439df7ee.js  718e96da5c.js  7fbaf2f9d4.js  85e7a5e54d.js  (+8 more)
src/: api.rs  candle.rs  cex.rs  client.rs  dex.rs  error.rs  forex.rs  fundingrate.rs  generated.rs  google.rs  lib.rs  models.rs  naver.rs  utils.rs
tests/: downstream_construction.rs  generated_contract.rs  live.rs  pagination.rs  wire_contract.rs
(+90 files in other folders)
