[package]
name = "datamaxi"
version = "0.12.0"
edition = "2021"
readme = "README.md"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "2.0.11"
# Only the `time` feature, for the async retry backoff sleep. reqwest's async
# surface already requires a Tokio runtime, so this adds no new runtime
# requirement — it only makes the timer dependency explicit.
tokio = { version = "1", default-features = false, features = ["time"] }

[features]
default = []
blocking = ["reqwest/blocking"]

[dev-dependencies]
dotenvy = "0.15.7"
mockito = "1.5.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
