[package]
name = "datamaxi"
version = "0.12.0"
edition = "2021"
rust-version = "1.86"
readme = "README.md"
license = "MIT"
description = "Official Rust SDK for the DataMaxi+ API: fetch historical and latest crypto/market data."
repository = "https://github.com/Bisonai/datamaxi-rust"
documentation = "https://docs.rs/datamaxi"
homepage = "https://datamaxiplus.com/"
keywords = ["datamaxi", "crypto", "api", "sdk", "trading"]
categories = ["api-bindings"]
authors = ["Bisonai"]

[dependencies]
# default-features off so callers can pick `native-tls` (default) or
# `rustls-tls`; re-enable everything else reqwest's own defaults bring
# (charset, http2, macos-system-configuration) so opting out of TLS choice
# is the only behavior change.
reqwest = { version = "0.12.7", default-features = false, features = ["json", "charset", "http2", "macos-system-configuration"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "2.0.11"
# Retry backoff jitter (see `apply_jitter` in `src/api.rs`). Zero deps outside
# wasm targets; MSRV 1.63, well under our 1.86 floor.
fastrand = "2"
# Parses the HTTP-date form of the `Retry-After` header (RFC 9110 §10.2.3) in
# `parse_retry_after`. Tiny, zero-dependency, MSRV well under our 1.86 floor.
httpdate = "1"
# Only the `time` feature, for the async retry backoff sleep. reqwest's async
# surface already requires a Tokio runtime, so this adds no new runtime
# requirement — it only makes the timer dependency explicit.
tokio = { version = "1", default-features = false, features = ["time"] }
# Optional: request-level spans/events in `get_loop!`, behind the `tracing`
# feature. Compiles away entirely (no dependency pulled in) when disabled.
tracing = { version = "0.1", optional = true }
# Optional: `futures::Stream` impl for the async `Paginator`, behind the
# `stream` feature. Only `futures-core` (the trait, no executor/combinators)
# is pulled in; MSRV well under our 1.86 floor. Compiles away entirely when
# disabled.
futures-core = { version = "0.3", optional = true }

[features]
default = ["native-tls"]
# Forwards to reqwest's `default-tls` (not reqwest's own `native-tls`
# feature) to preserve today's exact behavior without also exposing
# native-tls types in reqwest's public API.
native-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
blocking = ["reqwest/blocking"]
tracing = ["dep:tracing"]
stream = ["dep:futures-core"]

[dev-dependencies]
dotenvy = "0.15.7"
mockito = "1.5.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# Unconditional dev-dependency so tests can assert on emitted spans/events
# when built with `--features tracing`; does not affect release builds.
tracing = "0.1"
# Unconditional dev-dependency so the `stream`-gated pagination test can drive
# the `Stream` impl with `StreamExt::next`; does not affect release builds.
futures = "0.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
